--- a/src/app/shared/components/theme-toggle/theme-toggle.component.scss
+++ b/src/app/shared/components/theme-toggle/theme-toggle.component.scss
@@ -1,7 +1,7 @@
 .theme-toggle {
   position: fixed;
   top: 2rem;
-  right: 2rem;
+  left: 2rem;
   width: 48px;
   height: 48px;
   border-radius: 50%;
@@ -46,7 +46,7 @@
 @media (max-width: 768px) {
   .theme-toggle {
     top: 1rem;
-    right: 1rem;
+    left: 1rem;
     width: 40px;
     height: 40px;
   }
