--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+
 /* You can add global styles to this file, and also import other style files */
 
 :root {
@@ -11,7 +14,7 @@
   --border-color: #e1e5e9;
   
   /* Typography */
-  --font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  --font-family: 'Poppins', sans-serif;
   --h1-font-size: 3rem;
   --h2-font-size: 2.25rem;
   --h3-font-size: 1.5rem;
