Add typing effect for job title on home page, implement rendering timeout in server, and enhance styles for better layout and responsiveness.

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -11,7 +11,7 @@
   <div class="home-data">
     <h1 class="home-title">
       <p>Hi, I am Jean Gomes</p>
-      <span>Software Developer</span>
+      <span>{{ displayTextWithCursor }}</span>
     </h1>
 
     <p class="home-description">
