Revamp About page certificates section with new layout and styling. Introduce certificate cards with images and descriptions, and enhance grid layout for better responsiveness. Add new certificate assets for improved visual presentation.

--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -5,25 +5,63 @@
 
   <div class="about-content">
     <div class="about-section">
-      <h2 class="section-title">Certificates</h2>
-      <div class="profile-info">
-        <div class="certificate-item">
-          <h3>Certificado 1</h3>
-          <p>Descrição do certificado 1</p>
+      <h2 class="section-title">Certificados</h2>
+      <div class="certificates-grid">
+        <div class="certificate-card">
+          <div class="certificate-image">
+            <img src="assets/Programacao-full-stack.png" alt="Certificado Programação Full Stack" class="cert-img">
+          </div>
+          <div class="certificate-info">
+            <h3>Programação Full Stack</h3>
+            <p>Certificado de conclusão do curso de Programação Full Stack na Recode Pro.</p>
+            <div class="company-info">
+              <p>Recode Pro</p>
+              <span>https://recodepro.org.br/</span>
+            </div>
+          </div>
         </div>
-        <div class="certificate-item">
-          <h3>Certificado 2</h3>
-          <p>Descrição do certificado 2</p>
+        
+        <div class="certificate-card">
+          <div class="certificate-image">
+            <img src="assets/Javascript-Completo-ES6.png" alt="Certificado Javascript Completo ES6" class="cert-img">
+          </div>
+          <div class="certificate-info">
+            <h3>Javascript Completo ES6</h3>
+            <p>Certificado de conclusão da formação de Javascript Completo pela plataforma da Origamid.</p>
+            <div class="company-info">
+              <p>Origamid</p>
+              <span>https://www.origamid.com/</span>
+            </div>
+          </div>
         </div>
-        <div class="certificate-item">
-          <h3>Certificado 3</h3>
-          <p>Descrição do certificado 3</p>
+
+        <div class="certificate-card">
+          <div class="certificate-image">
+            <img src="assets/Alteryx_Foundational_Micro_Credential_Badge.png" alt="Certificado Alteryx Badge" class="cert-img">
+          </div>
+          <div class="certificate-info">
+            <h3>Alteryx Badge</h3>
+            <p>Credencial obtida através do exame de certificação da ferramenta Alteryx Designer.</p>
+            <div class="company-info">
+              <p>Alteryx</p>
+              <span>https://www.alteryx.com/</span>
+            </div>
+          </div>
         </div>
-        <div class="certificate-item">
-          <h3>Certificado 4</h3>
-          <p>Descrição do certificado 4</p>
+        
+        <div class="certificate-card">
+          <div class="certificate-image">
+            <img src="assets/Alteryx-udemy-bootcamp.png" alt="Certificado Alteryx Bootcamp" class="cert-img">
+          </div>
+          <div class="certificate-info">
+            <h3>Alteryx Bootcamp</h3>
+            <p>Certificado de conclusão do curso do Alteryx que ensina como usar a ferramenta para tratativa e análise de dados.</p>
+            <div class="company-info">
+              <p>Udemy</p>
+              <span>https://www.udemy.com/</span>
+            </div>
+          </div>
         </div>
-        <div class="certificate-item"></div>
       </div>
     </div>
 
