--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,14 @@
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
+/* Import Swiper styles */
+@import 'swiper/css';
+@import 'swiper/css/navigation';
+@import 'swiper/css/pagination';
+@import 'swiper/css/scrollbar';
+@import 'swiper/css/autoplay';
+@import 'swiper/css/effect-fade';
+
 /* You can add global styles to this file, and also import other style files */
 
 :root {
