--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -1,5 +1,8 @@
 <div class="projects-container">
-  <h1 class="page-title">My Portfolio</h1>
+  <h1 class="page-title">
+    <span class="title-part">My</span>
+    <span class="title-highlight">Portfolio</span>
+  </h1>
   
   <div class="projects-grid">
     <!-- Project 1: Developer Portfolio -->
