--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -1,6 +1,9 @@
 <div class="about-container">
   <div class="about-header">
-    <h1 class="about-title">About Me</h1>
+    <h1 class="about-title">
+      <span class="title-part">About</span>
+      <span class="title-highlight">Me</span>
+    </h1>
   </div>
 
   <div class="about-content">
